feat: graphql integration, maintenance request list api integration

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@apollo/client": "^3.13.1",
+    "@graphql-yoga/node": "^3.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "graphql": "^16.10.0",
     "mobx": "^6.13.6",
     "mobx-react-lite": "^4.1.0",
     "next": "15.2.1",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/graphql": "^14.2.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
